[project]
name = "pydantic-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pydantic[mypy]>=2.12.4",
    "pytest>=9.0.0",
    "sympy>=1.14.0",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
